# designate-init

./: .gitignore  .testr.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
designate_init/: __init__.py  shell.py
designate_init/clients/: designate.py  keystone.py  nova.py
designate_init/tests/: fakes.py
designate_init/tests/unit/clients/: test_nova.py
