[metadata]
name = designate-init
version = 0.1
summary = Initializator for OpenStack DNSaaS
description-file =
    README.rst
author = Michal Rostecki
author-email = michal.rostecki@allegrogroup.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    designate_init

[entry_points]
console_scripts =
    designate-init = designate_init.shell:main
